objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>7</defaultValue>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Offer__c</fullName>
        <label>Primary Offer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Whitepaper</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Free Trial</fullName>
                </value>
                <value>
                    <fullName>Case Study</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Contact Us Form</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Pardot_BudgetVariance__c</fullName>
        <formula>ActualCost - BudgetedCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>db_days_EndDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>EndDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_days_StartDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>StartDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>NGO_Fundraising</fullName>
        <active>true</active>
        <label>Fundraising</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Led_Campaign</fullName>
        <active>true</active>
        <description>Campaigns led and used by partners to market to their customers.</description>
        <label>Partner-Led Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Marketing_ChildCampaign</fullName>
        <active>true</active>
        <description>Child Campaign to a parent campaign</description>
        <label>Child Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Marketing_ParentCampaign</fullName>
        <active>true</active>
        <description>Top level Campaign</description>
        <label>Parent Campaign</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>